--- a/package.json
+++ b/package.json
@@ -99,23 +99,23 @@
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "autoprefixer": "^10.2.1",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "autoprefixer": "^10.2.3",
     "babel-plugin-istanbul": "^6.0.0",
     "bundlewatch": "^0.3.1",
     "clean-css-cli": "^4.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "eslint-config-xo": "^0.34.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-unicorn": "^25.0.1",
+    "eslint-plugin-unicorn": "^26.0.1",
     "find-unused-sass-variables": "^3.1.0",
     "glob": "^7.1.6",
     "hammer-simulator": "0.0.1",
     "hugo-bin": "^0.68.0",
     "ip": "^1.1.5",
     "jquery": "^3.5.1",
-    "karma": "^5.2.3",
+    "karma": "^6.0.0",
     "karma-browserstack-launcher": "1.4.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
@@ -123,7 +123,7 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-qunit": "^4.1.1",
     "karma-sinon": "^1.0.5",
-    "linkinator": "^2.11.2",
+    "linkinator": "2.11.2",
     "lockfile-lint": "^4.3.7",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
@@ -132,10 +132,10 @@
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "qunit": "^2.14.0",
-    "rollup": "^2.36.1",
+    "rollup": "^2.37.0",
     "shelljs": "^0.8.4",
     "sinon": "^7.5.0",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.9.0",
     "stylelint-config-twbs-bootstrap": "^2.1.0",
     "terser": "5.1.0",
     "vnu-jar": "20.6.30"
